# aufre-dit

./: .envrc  .gitignore  .pre-commit-config.yaml  Justfile  README.md  app.py  flake.nix  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  shell.nix  test_app.py
.harness/agents/: deployment.md  developer.md  observability.md  orchestrator.md  qa_reviewer.md  security_auditor.md  tester.md
.harness/skills/check-quality-gates/: SKILL.md
.harness/skills/generate-unit-tests/: SKILL.md
.harness/skills/parse-spec/: SKILL.md
.harness/skills/streamlit-security-audit/: SKILL.md
.harness/specs/: SPEC-001-exemple.md
.harness/templates/: qa_report_template.md  spec_template.md
static/: Questions de Parents - Édition 2025-2026.txt
