[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aufre-dit"
version = "0.1.0"
description = "Chatbot FAQ interactif pour le groupe SGDF Aufrédy La Rochelle"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.35.0",
    "google-genai>=0.1.1",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pyright>=1.1.0",
    "pre-commit>=3.6.0",
    "ruff>=0.3.0",
    "ty>=0.0.60",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.pyright]
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
include = ["app.py", "test_app.py"]
exclude = [".venv", "**/node_modules", "**/__pycache__", "**/.*"]

[tool.pytest.ini_options]
testpaths = ["test_app.py"]
